# todo-app

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
todo_app/: __init__.py  application.py  config.py  db.py  views.py
todo_app/static/: script.js  styles.css
todo_app/templates/: auth_login.html  footer.html  header.html  icon_header.html  index.html  tasks_close_by_id.html  tasks_create.html  tasks_delete_by_id.html  tasks_get.html  tasks_get_by_id.html  tasks_open_by_id.html  tasks_update_by_id.html
