[tool.poetry]
name = "todo-app"
version = "0.2.0"
description = "A web-based todo application"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>"]
readme = "README.md"
packages = [{include = "todo_app"}]

[tool.poetry.dependencies]
Flask = "^3.0.0"
Flask-SQLAlchemy = "^3.1.1"
python = "^3.11"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[tool.poetry.group.deploy.dependencies]
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]
line-length = 140

[tool.isort]
py_version = "311"
profile = "black"

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
strict = true
