[tool.poetry]
name = "todo-app"
version = "0.4.0"
description = "A web-based todo application"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>"]
readme = "README.md"
packages = [{include = "todo_app"}]

[tool.poetry.dependencies]
Flask = "^3.0.0"
Flask-SQLAlchemy = "^3.1.1"
python = "^3.12"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[tool.poetry.group.deploy.dependencies]
gunicorn = "^22.0.0"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]
line-length = 140

[tool.isort]
py_version = "311"
profile = "black"

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
strict = true
